[NS NT NW] - Fixed - quotes ARE NOW being removed. Have to remove logback-test.xml from assembly production.

--- a/.gitignore
+++ b/.gitignore
@@ -148,6 +148,7 @@ buildNumber.properties
 .mvn/timing.properties
 
 .idea/
-TestNodes.class
 src/main/java/ar/edu/itba/primer/
 tlatest.iml
+
+compiled/
